tests/ui/parser/issues/issue-94340.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/auxiliary/issue-94340-inc.rs:2:1
   |
LL | #![deny(rust_2018_idioms)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
   = note: outer attributes, like `#[test]`, annotate the item following them

error: an inner attribute is not permitted in this context
  --> $DIR/auxiliary/issue-94340-inc.rs:3:1
   |
LL | #![deny(unused_must_use)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
   = note: outer attributes, like `#[test]`, annotate the item following them

error: aborting due to 2 previous errors

